sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:15: error: value += is not a member of Int
     base += 1 
          ^